--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,15 @@
         "php": ">=5.6.4",
         "barryvdh/laravel-dompdf": "^0.8.1",
         "doctrine/dbal": "^2.5",
+        "fzaninotto/faker": "~1.4",
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
         "maatwebsite/excel": "~2.1.0",
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"   
+        "mpdf/mpdf": "^7.0",
+        "phpunit/phpunit": "~5.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
